# contractor

./: .env  .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  LICENSE  Makefile  NEXT_STEPS.md  README.md  TRACEABILITY_MATRIX.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  audit.py  control_plane.py  runtime.py
app/control_plane/: __init__.py
app/shared/: errors.py  metrics.py
contracts/bundles/: manifest.schema.yaml
contracts/ontology/: entities.schema.yaml  intents.schema.yaml  terms.schema.yaml
contracts/policies/: cache.schema.yaml  output.schema.yaml  planner.schema.yaml  runtime.schema.yaml
data/audit/: audit-2026-02-05.log.jsonl  audit-2026-02-06.log.jsonl  audit.yaml
data/control_plane/: demo_aliases.json  tenants.json
data/runtime/: rate_limit_policy.yaml  tenants.json
docs/: ARCHITECTURE.md  CHECKLIST-STAGE-0.md  DEFINITION_OF_DONE.md  EXECUTIVE-OVERVIEW.md  FOUNDATION.md  LANDING-PAGE.md  PRODUCT.md  PRODUCT_STATUS.md  PROGRAMADOR_RESIDENTE_PROMPT.md  PR_TEMPLATE.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md
docs/ADR/: 0001-control-plane-vs-data-plane.md  0002-artifact-versioning-model.md  0003-multi-tenant-isolation-model.md  0004-artifact-registry-backend-strategy.md  0005-client-data-connectivity-model.md  0006-multi-tenant-observability-model.md  0007-security-baseline-and-threat-model.md  0008-runtime-caching-strategy.md  0009-quality-gates-and-release-promotion-criteria.md  0010-planner-and-ontology-resolution-strategy.md  0011-template-rendering-and-output-safety-model.md  0012-rag-integration-and-knowledge-boundaries.md  0013-rate-limiting-quotas-and-cost-controls.md  0014-api-contracts-and-backward-compatibility.md  0015-deployment-environments-and-release-lifecycle.md  0016-sdks-and-client-integration-strategy.md  0017-billing-metering-and-commercial-plans.md  0018-data-privacy-lgpd-gdpr-and-retention-policies.md  0019-incident-management-and-slos.md  0020-governance-model-and-change-management.md  0021-product-roadmap-and-maturity-stages.md  README.md  (+18 more)
sdk/python/: README.md  pyproject.toml
sdk/python/contractor_sdk/: __init__.py  client.py  config.py  control.py  errors.py  runtime.py
tests/: conftest.py  test_audit_end_to_end.py  test_control_plane_auth.py  test_control_plane_gates.py  test_control_plane_promote_rollback.py  test_demo_faq_bundle.py  test_runtime_auth.py  test_runtime_bundle_distribution.py  test_runtime_execute.py  test_runtime_rate_limit.py  test_smoke.py
(+200 files in other folders)
