[project]
name = "contractor"
version = "0.0.1"
description = "CONTRACTOR - multi-tenant contract-driven analytics runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "PyYAML>=6.0",
  "jinja2>=3.1",
  "psycopg2-binary>=2.9",
  "redis>=5.0.0",
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "requests>=2.31",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
