[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contractor"
version = "0.0.0"
description = "CONTRACTOR - Control Plane for governed AI runtimes (bootstrap)"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
