[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contractor"
version = "0.0.0"
description = "CONTRACTOR - Control Plane for governed AI runtimes (bootstrap)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "jinja2>=3.1.0",
  "jsonschema>=4.22.0",
  "pydantic>=2.6.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []
