[project]
name = "contractor-sdk-python"
version = "0.1.0"
description = "Contractor SDK (Python) — Stage 2"
requires-python = ">=3.10"
dependencies = ["requests>=2.0"]
readme = "README.md"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["contractor_sdk*"]
